# incidental-detail

./: README  incidental-detail.cabal
src/: DetailGen.hs  Examples.hs  Generator.hs  Grammar.hs  Hastwix.hs  LocationSelection.hs  Main.hs  Matwix.hs  MatwixUtils.hs  Maya.hs  PointSelect.hs  Selection.hs  Testing.hs  Transform.hs  Types.hs  Utils.hs  Vectwix.hs  _Main.hs  makeScene.py
src/Graphics/DetailGen/: Maya.hs  Monad.hs  Point.hs  PointSelection.hs  Vec3.hs
