name:                incidental-detail
version:             0.1.0
license:             MIT
license-file:        LICENSE
author:              Timothy Jones
maintainer:          Timothy Jones <git@zimothy.com>
copyright:           (c) 2013
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10
synopsis:
  Intuitive synthesis of incidental detail using higher-order functions.

flag development
  description: Disables warnings as errors, doesn't optimize compilation
  default:     False

executable incidental-detail
  hs-source-dirs: src
  main-is:        Main.hs

  default-language: Haskell2010

  build-depends:
    base   >= 4.6.0 && < 5.0,
    matrix >= 0.2.1 && < 0.3

  if flag(development)
    ghc-options: -Wall
  else
    ghc-options: -Wall -Werror -O2 -funbox-strict-fields

