name:                incidental-detail
version:             0.1.0
license:             MIT
license-file:        LICENSE
author:              Timothy Jones
maintainer:          Timothy Jones <git@zimothy.com>
copyright:           (c) 2013
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10
synopsis:
  Intuitive synthesis of incidental detail using higher-order functions.

executable incidental-detail
  hs-source-dirs:   src
  main-is:          Main.hs
  default-language: Haskell2010

  other-extensions:
    GeneralizedNewtypeDeriving

  other-modules:
    Graphics.DetailGen.Monad
    Graphics.DetailGen.Point
    Graphics.DetailGen.PointSelection
    Graphics.DetailGen.Vec3

  build-depends:
    base       >= 4.6.0 && < 5.0,
    containers >= 0.5.0 && < 0.6,
    free       >= 3.4.2 && < 5.0,
    matrix     >= 0.2.1 && < 0.3

  ghc-options: -Wall

