name:                incidental-detail
version:             0.1.0
license:             MIT
license-file:        LICENSE
author:              Timothy Jones
maintainer:          Timothy Jones <git@zimothy.com>
copyright:           (c) 2013
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10
synopsis:            Synthesis of incidental detail
description:
  Generates incidental detail on a Maya model by building a Python script.

executable incidental-detail
  hs-source-dirs:   src
  main-is:          Main.hs
  default-language: Haskell2010

  default-extensions:
    OverloadedStrings

  other-extensions:
    GeneralizedNewtypeDeriving

  other-modules:
    Examples
    Graphics.DetailGen.Monad
    Graphics.DetailGen.Maya
    Graphics.DetailGen.Point
    Graphics.DetailGen.PointSelection
    Graphics.DetailGen.Vec3

  build-depends:
    base        >= 4.6.0  && < 5.0,
    bytestring  >= 0.10.0 && < 0.11,
    containers  >= 0.5.0  && < 0.6,
    free        >= 3.4.2  && < 5.0,
    io-streams  >= 1.1.2  && < 1.2,
    matrix      >= 0.2.1  && < 0.3,
    utf8-string >= 0.3.7  && < 0.4

  ghc-options: -Wall

